<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:text="@string/btn_clr"
            android:layout_width="0dp"
            android:layout_height="85dp" android:id="@+id/clrbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="475dp"
            android:background="@android:color/holo_blue_dark" android:textSize="30sp"
            android:onClick="onClickclrbtn" app:layout_constraintEnd_toStartOf="@+id/button"/>
    <Button
            android:text="@string/btn_ans"
            android:layout_width="0dp"
            android:layout_height="85dp" android:id="@+id/ansbtn"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="475dp"
            android:background="@android:color/holo_green_dark" android:textSize="30sp"
            android:onClick="onClickansbtn" app:layout_constraintStart_toEndOf="@+id/button"/>
    <Button
            android:text="@string/btn_1"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn1"
            app:layout_constraintTop_toBottomOf="@+id/clrbtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn2"
            app:layout_constraintBottom_toTopOf="@+id/btn4"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_2"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn2"
            app:layout_constraintStart_toEndOf="@+id/btn1" app:layout_constraintEnd_toStartOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/clrbtn" app:layout_constraintBottom_toTopOf="@+id/btn5"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_3"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn3"
            app:layout_constraintStart_toEndOf="@+id/btn2" app:layout_constraintEnd_toStartOf="@+id/btn_add"
            app:layout_constraintTop_toBottomOf="@+id/ansbtn" app:layout_constraintBottom_toTopOf="@+id/btn6"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_add"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/ansbtn"
            app:layout_constraintBottom_toTopOf="@+id/btn_sub"
            android:background="@android:color/holo_orange_light" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_4"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn5"
            app:layout_constraintBottom_toTopOf="@+id/btn7"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_5"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn5"
            app:layout_constraintStart_toEndOf="@+id/btn4"
            app:layout_constraintTop_toBottomOf="@+id/btn2"
            app:layout_constraintEnd_toStartOf="@+id/btn6" app:layout_constraintBottom_toTopOf="@+id/btn8"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_6"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn6"
            app:layout_constraintTop_toBottomOf="@+id/btn3" app:layout_constraintEnd_toStartOf="@+id/btn_sub"
            app:layout_constraintStart_toEndOf="@+id/btn5" app:layout_constraintBottom_toTopOf="@+id/btn9"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_sub"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add"
            app:layout_constraintStart_toEndOf="@+id/btn6" app:layout_constraintBottom_toTopOf="@+id/btn_mul"
            android:background="@android:color/holo_orange_light" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_7"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn4" app:layout_constraintEnd_toStartOf="@+id/btn8"
            app:layout_constraintBottom_toTopOf="@+id/btn_dec"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_8"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn8"
            app:layout_constraintStart_toEndOf="@+id/btn7" app:layout_constraintEnd_toStartOf="@+id/btn9"
            app:layout_constraintTop_toBottomOf="@+id/btn5" app:layout_constraintBottom_toTopOf="@+id/btn0"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_9"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn9"
            app:layout_constraintTop_toBottomOf="@+id/btn6"
            app:layout_constraintStart_toEndOf="@+id/btn8" app:layout_constraintEnd_toStartOf="@+id/btn_mul"
            app:layout_constraintBottom_toTopOf="@+id/btn_mod"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_mul"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn_mul"
            app:layout_constraintTop_toBottomOf="@+id/btn_sub"
            app:layout_constraintStart_toEndOf="@+id/btn9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_div"
            android:background="@android:color/holo_orange_light" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/opn_bracket"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn_dec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn7"
            app:layout_constraintEnd_toStartOf="@+id/btn0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_0"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn0"
            app:layout_constraintStart_toEndOf="@+id/btn_dec"
            app:layout_constraintEnd_toStartOf="@+id/btn_mod"
            app:layout_constraintTop_toBottomOf="@+id/btn8" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/clo_bracket"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn_mod"
            app:layout_constraintStart_toEndOf="@+id/btn0"
            app:layout_constraintTop_toBottomOf="@+id/btn9" app:layout_constraintEnd_toStartOf="@+id/btn_div"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/darker_gray" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <Button
            android:text="@string/btn_div"
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/btn_div"
            app:layout_constraintStart_toEndOf="@+id/btn_mod"
            app:layout_constraintTop_toBottomOf="@+id/btn_mul"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/holo_orange_light" android:textSize="30sp"
            android:onClick="onClinckdatabtn"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/ans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/clrbtn"
            app:layout_constraintTop_toBottomOf="@+id/exp" android:textSize="36sp"
            android:gravity="bottom|end"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/exp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ans" android:textSize="36sp"
            android:gravity="bottom|end"/>
    <Button
            android:text="@string/btn_del"
            android:layout_width="0dp"
            android:layout_height="85dp" android:id="@+id/button"
            app:layout_constraintStart_toEndOf="@+id/clrbtn" app:layout_constraintEnd_toStartOf="@+id/ansbtn"
            app:layout_constraintBottom_toTopOf="@+id/btn3"
            app:layout_constraintTop_toBottomOf="@+id/ans" android:textSize="30sp"
            android:background="@android:color/holo_purple"
            android:onClick="onClickdelbtn"/>
</androidx.constraintlayout.widget.ConstraintLayout>